[project]
name = "jupyter-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gym-super-mario-bros>=7.4.0",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "tensordict>=0.7.2",
    "torch>=2.6.0",
    "stable-baselines3>=2.2.1",
    "torchrl>=0.7.2",
    "torchvision>=0.21.0",
    "numpy<2.0.0",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.19.0",
    "shimmy[gym-v21]==2.0.0",
    "gymnasium[other]>=1.0.0",
]
